--- a/integrations.mdx
+++ b/integrations.mdx
@@ -21,7 +21,7 @@ This unlocks several key benefits:
 
 ## Cloud platforms
 
-Anywhere that you can run Kubernetes, Chalk can also run (using Terraform and Helm Charts).
+Anywhere that you can run Kubernetes, Chalk can also run.
 
 Chalk deploys into your VPC co-located with your data sources for the lowest latency and cost.
 Multi-cloud deployments for high availability and disaster recovery.
@@ -49,7 +49,7 @@ from users
 
 A feature class can be hydrated / resolved by multiple SQL sources; we can pull a user's social security number from a different database that has stricter access controls.
 
-In addition, Chalk can reverse-etl features from your data warehouses into Chalk's online store for low-latency access.
+In addition, Chalk can reverse-ETL features from your data warehouses into Chalk's online store for low-latency access.
 Chalk integrates natively (C++ integration) with the following data sources and pushes down filters and projections into SQL queries for more efficient data fetching.
 
 **Data Warehouses**
