--- a/integrations.mdx
+++ b/integrations.mdx
@@ -253,4 +253,4 @@ With dozens of native integrations across cloud platforms, databases, streaming 
 
 Whether you're pulling user data from PostgreSQL, processing real-time events from Kafka, caching expensive feature computations in Redis, or extracting features from unstructured data with LLMs—Chalk's unified platform handles it all.
 
-The result? **Faster time to production**, **lower operational overhead**, and **consistent feature logic** across your entire ML stack.
+The result? faster time to production, lower operational overhead, and consistent feature logic across your entire ML stack.
