--- a/integrations.mdx
+++ b/integrations.mdx
@@ -9,7 +9,7 @@ published: true
 
 ---
 
-Chalk integrates seamlessly with your underlying systems--querying your data sources directly eliminating the need for ETL!
+Chalk integrates seamlessly with your underlying systems--querying your data sources directly and eliminating the need for ETL!
 
 This unlocks several key benefits:
 - alleviates the need to move data across multiple systems
