--- a/integrations.mdx
+++ b/integrations.mdx
@@ -79,7 +79,7 @@ Chalk integrates natively (C++ integration) with the following data sources and 
 
 ---
 
-## 🔄 Streaming / Real-Time Data Systems
+## Streaming / Real-Time Data Systems
 
 We also provide [Stream resolvers](/docs/stream-sources) for integrating Kafka compatible systems data sources. 
 
