Apply suggestion from @sjmignot

--- a/model_training.mdx
+++ b/model_training.mdx
@@ -30,7 +30,7 @@ Single-node training is ideal for smaller datasets that can fit comfortably in m
 
 ### Basic Training Setup
 
-Here's a complete example of single-node training with PyTorch. Define your training code using `chalk_train` for checkpointing and
+Here's a complete example of single-node training with PyTorch. Use the`chalk_train` module for checkpointing and
 accessing Chalk datasets.
 
 ```python
